--- a/main.tex
+++ b/main.tex
@@ -12,7 +12,7 @@
 \usepackage{enumitem}
 
 % adjust the page margins
-\usepackage[scale=0.75]{geometry}
+\usepackage[scale=0.8]{geometry}
 %\setlength{\hintscolumnwidth}{3cm}                % if you want to change the width of the column with the dates
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
@@ -23,7 +23,7 @@
 \mobile{(206) 909.7183}
 \email{hjohns12@macalester.edu}
 \homepage {goo.gl/dLKVNv}                        % optional, remove / comment the line if not wanted
-\extrainfo{ Born: Santa Rosa, CA (U.S. Citizen)}                 % optional, remove / comment the line if not wanted
+\extrainfo{ Born: Santa Rosa, CA (U.S. Citizen), 1995}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 
 
@@ -41,7 +41,8 @@
 %----------------------------------------------------------------------------------
 \begin{document}
 %\begin{CJK*}{UTF8}{gbsn}                          % to typeset your resume in Chinese using CJK
-%-----       resume       ---------------------------------------------------------
+
+
 \makecvtitle
 
 \section{Education}
@@ -49,25 +50,32 @@
 {\begin{itemize}[label=\textbullet]
   \item Statistics Honors Thesis: "Body-Worn Cameras and Race in Officer-Involved Shootings"
   \item Economics Capstone: "Natural Disasters and Mobile Banking Adoption in 55 Developing Countries"
+  \item Cumulative GPA: 3.65
 \end{itemize}
 }
 
 \section{Independent Research}
 %\subsection{Vocational}
-\cventry{2016 -- present}{Statistics Honors Thesis}{\textnormal{Body-Worn Cameras and Race in Officer-Involved Shootings}}{}{}{}{
+\cventry{Aug. 2016 -- present}{Statistics Honors Thesis}{\textbf{Body-Worn Cameras and Race in Officer-Involved Shootings}}{}{}{}{
 \begin{itemize}
-\item Specify a zero-inflated negative binomial model to analyze the relationship between body-worn cameras and victim race in officer-involved shootings. 
+\item Specify a zero-inflated negative binomial regression to analyze the relationship between body-worn cameras and victim race in officer-involved shootings. 
 \end{itemize}}
 
-\cventry{Fall 2016}{Survival Analysis Term Paper}{\textnormal{Racial Difference in the Predictive Accuracy of a Recidivism Risk Assessment Instrument}}{}{}{}{
+\cventry{Fall 2016}{Survival Analysis Term Paper}{\textbf{Racial Difference in the Predictive Accuracy of a Recidivism Risk Assessment Instrument}}{}{}{}{
 \begin{itemize}
-\item Test if the COMPAS recidivism risk assessment tool predicts the risk of recidivism with equal accuracy across races.  
+\item Test if the COMPAS recidivism risk assessment tool predicts the risk of recidivism with equal accuracy across races using a Cox proportional hazards model;
+\item Awarded first place in the American Statistical Association's undergraduate research paper competition (USRESP). 
 \end{itemize}}
 
-\cventry{Spring 2016}{Econometrics Term Paper}{\textnormal{Heroin and Naloxone: Disentangling an Epidemic}}{}{}{}{
+\cventry{Fall 2016}{International Development Term Paper}{\textbf{Natural Disasters and Mobile Banking Adoption}}{}{}{}{
 \begin{itemize}
-\item Analyze the impact of making naloxone available to heroin users;
-\item Winner of the Minnesota Economics Association \textit{best term paper}.
+\item Analyze whether a country-wide environmental shock is associated with increasing adoption of mobile banking in 55 developing countries.  
+\end{itemize}}
+
+\cventry{Spring 2016}{Econometrics Term Paper}{\textbf{Heroin and Naloxone: Disentangling an Epidemic}}{}{}{}{
+\begin{itemize}
+\item Investigate the impact of making naloxone available to heroin users;
+\item Awarded third place in the Minnesota Economic Association's undergraduate research paper competition.
 \end{itemize}}
 
 
@@ -90,19 +98,30 @@
 \item Researched the economics of local food supply chains in St. Paul and Minneapolis. 
 \end{itemize}}
 
-\section{Programs and Languages}
-\cvitem{Advanced Proficiency}{R, STATA, Tableau, LaTex, Microsoft Office}
+\section{Computer Skills}
+\cvitem{Advanced Proficiency}{R, Stata, Tableau, LaTex, Microsoft Office}
 \cvitem{Intermediate Proficiency}{Python, SAS, Java, C++}
 \cvitem{Basic Proficiency}{SQL, SPSS}
 
 \section{Awards, Grants, and Honors}
-\cventry{2016}{\textnormal{Term Paper Contest Winner (Minneapolis Federal Reserve)}}{}{}{}{}
+\cventry{2017}{\textnormal{1st place, undergraduate research paper contest winner (American Statistical Association)}}{}{}{}{}
+\cventry{2016}{\textnormal{3rd place, term paper contest winner (Minneapolis Federal Reserve)}}{}{}{}{}
+\cventry{2016}{\textnormal{Educating Sustainability Ambassador}}{}{}{}{}
 \cventry{2016}{\textnormal{Omicron Delta Epsilon Economics Honors Society Member}}{}{}{}{}
 \cventry{2013-14}{\textnormal{Dean’s List (Macalester College)}}{}{}{}{}
 \cventry{2013-2017}{\textnormal{DeWitt Wallace Distinguished Scholar}}{}{}{}{}
 
 \section{Presentations}
 \cventry{10/2016}{Graduate Research Opportunities for Women in Mathematics (GROW) Conference}{Northwestern University}{}{}{Summer Research during Undergrad}
+
+
+\section{Languages}
+
+\cvitemwithcomment{English}{Fluent}{}
+\cvitemwithcomment{French}{Intermediate}{Conversational}
+\cvitemwithcomment{Arabic}{Basic}{Basic words and phrases only}
+\cvitemwithcomment{Bambara}{Basic}{Basic words and phrases only}
+
 
 
 
