latest: 1/21/18 with MPR

--- a/main.tex
+++ b/main.tex
@@ -19,9 +19,9 @@
 % personal data
 \name{Hope}{Johnson}
 \title{Curriculum Vit\ae}                               % optional, remove / comment the line if not wanted
-\address{1465 St. Clair Avenue }{St. Paul, MN 55105}
+\address{35 Faneuil St., Unit 2}{Brighton, MA 02135}
 \mobile{(206) 909.7183}
-\email{hjohns12@macalester.edu}
+\email{hopecaneel@gmail.com}
 \homepage {goo.gl/dLKVNv}                        % optional, remove / comment the line if not wanted
 \extrainfo{ Born: Santa Rosa, CA (U.S. Citizen), 1995}                 % optional, remove / comment the line if not wanted
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
@@ -48,15 +48,15 @@
 \section{Education}
 \cventry{2013--2017}{B.A.}{Macalester College}{St. Paul, MN}{\textit{Statistics, Economics}}
 {\begin{itemize}[label=\textbullet]
-  \item Statistics Honors Thesis: "Body-Worn Cameras and Race in Officer-Involved Shootings"
-  \item Economics Capstone: "Natural Disasters and Mobile Banking Adoption in 55 Developing Countries"
   \item Cumulative GPA: 3.65
+  \item Statistics Honors Thesis: "A Statistical Analysis of Body-Worn Cameras in Officer-Involved Shootings"
+  \item Economics Capstone: "Natural Disasters and Mobile Banking Adoption in 55 Developing Countries"
 \end{itemize}
 }
 
 \section{Independent Research}
 %\subsection{Vocational}
-\cventry{Aug. 2016 -- present}{Statistics Honors Thesis}{\textbf{Body-Worn Cameras and Race in Officer-Involved Shootings}}{}{}{}{
+\cventry{Aug. 2016 -- present}{Statistics Honors Thesis}{\textbf{A Statistical Analysis of Body-Worn Cameras in Officer-Involved Shootings}}{}{}{}{
 \begin{itemize}
 \item Specify a zero-inflated negative binomial regression to analyze the relationship between body-worn cameras and victim race in officer-involved shootings. 
 \end{itemize}}
@@ -78,41 +78,68 @@
 \item Awarded third place in the Minnesota Economic Association's undergraduate research paper competition.
 \end{itemize}}
 
+\cventry{Fall 2015}{Environmental Policy Term Paper}{\textbf{Farmers' Networks and Extreme Weather Events}}{}{}{}{
+\begin{itemize}
+\item Develop a Bayesian decision-tree to model the likelihood that a farmer takes signals from members of their network.
+\end{itemize}}
+
+\cventry{Fall 2016}{Agricultural Economics Term Paper}{\textbf{Can Water Be Efficiently Allocated Through Price Policy?}}{}{}{}{
+\begin{itemize}
+\item Empirically investigate three water pricing mechanisms to assess how each maximize social benefit.
+\end{itemize}}
+
 
 \section{Experience}
-\cventry{Dec. 2016--present}{Data Visualization Consultant}{Bill \& Melinda Gates Foundation}{Seattle, WA}{}{
+\cventry{Sept. 2017--present}{Junior Front-End Data Scientist}{Mathematica Policy Research}{Cambridge, MA}{}{
+\begin{itemize}%
+\item Conduct quantitative analysis to assess the impact of Medicaid programs on patient health outcomes and expenditures;
+\item Prepare graphs and tables for senior researchers;
+\item Manage and ensure the quality of large-scale health care datasets.
+\end{itemize}}
+\bigskip 
+
+
+\cventry{Dec. 2016--June 2017}{Data Visualization Consultant}{Bill \& Melinda Gates Foundation}{Seattle, WA}{}{
 \begin{itemize}%
 \item Clean survey data from Kenyan households on health service access;
 \item Visualize gaps between health services and patient care using Tableau;
 \item Prepare visuals, analysis, and discussion for forthcoming articles in the Journal of Infectious Disease. 
 \end{itemize}}
-
+\bigskip 
 \cventry{June - Aug. 2016}{Data Science Research Analyst}{Educating Sustainability Ambassadors Initiative}{St. Paul, MN}{}{
 \begin{itemize}%
 \item Map farm-to-school programs and educational attainment gaps in Minnesota;
 \item Construct a linear mixed-effects model to describe the relationship between farm-to-school programs and student outcomes in Minnesota.
 \end{itemize}}
-
+\bigskip 
 \cventry{June - Aug. 2015}{Empirical Research Assistant}{Crossroads Resource Center}{Minneapolis, MN}{}{
 \begin{itemize}%
 \item Researched the economics of local food supply chains in St. Paul and Minneapolis. 
 \end{itemize}}
+\bigskip 
+\cventry{June - Aug. 2017}{Farm hand}{Threshing Table Farm}{Star Prairie, WI}{}{
+\begin{itemize}%
+\item Performed harvesting and farm maintenance tasks on a small vegetable farm.
+\end{itemize}}
 
 \section{Computer Skills}
-\cvitem{Advanced Proficiency}{R, Stata, Tableau, LaTex, Microsoft Office}
-\cvitem{Intermediate Proficiency}{Python, SAS, Java, C++}
-\cvitem{Basic Proficiency}{SQL, SPSS}
+\cvitem{Advanced Proficiency}{R, Stata, Stan, LaTex, Microsoft Office}
+\cvitem{Intermediate Proficiency}{Python, JavaScript, Tableau}
+\cvitem{Basic Proficiency}{SQL}
 
 \section{Awards, Grants, and Honors}
+\cventry{2017}{\textnormal{Recipient of the David Bressoud prize for excellent communication skills in mathematics}}{}{}{}{}
 \cventry{2017}{\textnormal{1st place, undergraduate research paper contest winner (American Statistical Association)}}{}{}{}{}
 \cventry{2016}{\textnormal{3rd place, term paper contest winner (Minneapolis Federal Reserve)}}{}{}{}{}
-\cventry{2016}{\textnormal{Educating Sustainability Ambassador}}{}{}{}{}
+\cventry{2016}{\textnormal{Educating Sustainability Ambassador (Howard Hughes Medical Institute/Macalester College)}}{}{}{}{}
 \cventry{2016}{\textnormal{Omicron Delta Epsilon Economics Honors Society Member}}{}{}{}{}
 \cventry{2013-14}{\textnormal{Dean’s List (Macalester College)}}{}{}{}{}
 \cventry{2013-2017}{\textnormal{DeWitt Wallace Distinguished Scholar}}{}{}{}{}
 
 \section{Presentations}
-\cventry{10/2016}{Graduate Research Opportunities for Women in Mathematics (GROW) Conference}{Northwestern University}{}{}{Summer Research during Undergrad}
+\cventry{April 2017}{Honors Defense}{Macalester College}{}{}{``A Statistical Analysis of Body-Worn Cameras in Officer-Involved Shootings''}
+\bigskip
+\cventry{Oct. 2016}{Graduate Research Opportunities for Women in Mathematics (GROW) Conference}{Northwestern University}{}{}{``Summer Research as an Undergraduate''}
 
 
 \section{Languages}
