Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -21,8 +21,9 @@
 \title{Curriculum Vit\ae}                          
 \address{35 Faneuil St., Unit 2}{Brighton, MA 02135}
 \mobile{(206) 909.7183}
-\email{hopecaneel@gmail.com}
-%\homepage {goo.gl/dLKVNv}       
+\email{hopecaneel [a t] gmail.com}
+\homepage{https://hjohns12.github.io/}
+   
 
 
 
@@ -85,6 +86,7 @@
 \item Develop and implement statistical network analyses to evaluate a primary care delivery program;
 \item Perform Bayesian statistical analysis to assess the impact of Medicaid/Medicare intervention programs;
 \item Simulate correlated patient-level data for regression testing;
+\item Innovate measure scores to quantify things like coordination of care in medical practices;
 \item Create polished data visualizations and dashboards using D3.js, Plotly (Julia), and ggplot (R).
 \end{itemize}}
 \bigskip 
@@ -108,7 +110,7 @@
 \item Researched the economics of local food supply chains in St. Paul and Minneapolis. 
 \end{itemize}}
 
-\section{Computer Skills}
+\section{Information Technology}
 \cvitem{Advanced Proficiency}{R, Julia, Stan, LaTex, Git, Stata, Microsoft Office}
 \cvitem{Intermediate Proficiency}{Python, D3.js, Node.js, JavaScript, HTML, CSS, Processing, Tableau}
 \cvitem{Basic Proficiency}{SQL, SAS}
